Tidy semanticdb plugin apply